# fastapi-react-docker

./: .env.backend  Makefile  README.md  docker-compose.dev.yml  docker-compose.inf.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/src/: bootstrap.py  config.py  main.py
backend/src/database/: __init__.py  get_db.py
backend/src/database/alembic/: env.py
backend/src/database/alembic/versions/: 4b1312e5d956_init.py
backend/src/database/entities/: Project.py  Task.py  TaskState.py  User.py  __init__.py
backend/src/database/entities/shared/: IntegerIdEntity.py
backend/src/infrastructure/persistency/: UnitOfWork.py  __init__.py  get_unit_of_work.py
backend/src/infrastructure/persistency/repositories/: BaseRepository.py  ProjectRepository.py  TaskRepository.py  TaskStateRepository.py  UserRepository.py  __init__.py
backend/src/routes/: __init__.py  project.py  task.py  user.py
backend/src/use_cases/projects/: __init__.py
backend/src/use_cases/projects/create/: CreateProjectHandler.py  CreateProjectRequest.py  CreateProjectResponse.py
backend/src/use_cases/projects/get/: GetProjectHandler.py  GetProjectRequest.py  GetProjectResponse.py
backend/src/use_cases/projects/list/: ListProjectHandler.py  ListProjectRequest.py  ListProjectResponseItem.py
backend/src/use_cases/shared/: BaseHandler.py
backend/src/use_cases/tasks/: __init__.py
backend/src/use_cases/tasks/create/: CreateTaskHandler.py  CreateTaskRequest.py  CreateTaskResponse.py
backend/src/use_cases/user/: __init__.py
backend/test/user/: test_user_task_report.py
(+107 files in other folders)
